# Yuzukilizard

./: README.md
Software/sunxi-mpp/: .gitignore  CMakeLists.txt  README.md  STAGING_DIR.sh
Software/sunxi-mpp/CMake/: sunxi_mpp_include.cmake  sunxi_mpp_lib.cmake
Software/sunxi-mpp/include/algo_aw/: awnn_det.h
Software/sunxi-mpp/include/rtsp/: MediaStream.h  TinyServer.h
Software/sunxi-mpp/lib/: README.txt  libglog.so.0  libss.so.2.0  libssl.so.1.1  libunwind.so.8.0.1
Software/sunxi-mpp/sample/: CMakeLists.txt  README.md
Software/sunxi-mpp/sample/configfileparser/: CMakeLists.txt  confparser.c  confparser.h  demo.conf
Software/sunxi-mpp/sample/sample_CodecParallel/: CMakeLists.txt  Readme.txt  sample_CodecParallel.c  sample_CodecParallel.h  sample_CodecParallel_config.h
Software/sunxi-mpp/sample/sample_MotionDetect/: CMakeLists.txt  Readme.txt  sample_MotionDetect.c  sample_MotionDetect.h  sample_MotionDetect_config.h
Software/sunxi-mpp/sample/sample_UILayer/: CMakeLists.txt  sample_UILayer.c
Software/sunxi-mpp/sample/sample_adec/: CMakeLists.txt  Readme.txt  sample_adec.c
Software/sunxi-mpp/sample/sample_aec/: CMakeLists.txt  sample_aec.conf
Software/sunxi-mpp/sample/sample_aenc/: CMakeLists.txt  sample_aenc.c  sample_aenc.h
Software/sunxi-mpp/sample/sample_ai/: CMakeLists.txt  Readme.txt  sample_ai.h  sample_ai_config.h
Software/sunxi-mpp/sample/sample_ai2aenc/: CMakeLists.txt  sample_ai2aenc.c  sample_ai2aenc.h
Software/sunxi-mpp/sample/sample_ai2aenc2muxer/: CMakeLists.txt  sample_ai2aenc2muxer.conf  sample_ai2aenc2muxer.h
Software/sunxi-mpp/sample/sample_ao/: CMakeLists.txt  sample_ao.h
Software/sunxi-mpp/sample/sample_aoSync/: CMakeLists.txt  sample_aoSync.conf
Software/sunxi-mpp/sample/sample_ao_resample_mixer/: CMakeLists.txt  sample_ao_resample_mixer.c  sample_ao_resample_mixer.conf  sample_ao_resample_mixer.h  sample_ao_resample_mixer_config.h
Software/sunxi-mpp/sample/sample_demux2adec/: CMakeLists.txt  Readme.txt  sample_demux2adec.conf  sample_demux2adec_conf.h
Software/sunxi-mpp/sample/sample_demux2adec2ao/: CMakeLists.txt  sample_demux2adec2ao.conf  sample_demux2adec2ao.h  sample_demux2adec2ao_common.h
Software/sunxi-mpp/sample/sample_demux2vdec/: CMakeLists.txt  sample_demux2vdec.c  sample_demux2vdec.h  sample_demux2vdec_common.h  yuv420pTobmp.c
Software/sunxi-mpp/sample/sample_demux2vdec2vo/: CMakeLists.txt  Readme.txt  sample_demux2vdec2vo.c  sample_demux2vdec2vo.h  sample_demux2vdec2vo_common.h
Software/sunxi-mpp/sample/sample_demux2vdec_saveFrame/: CMakeLists.txt  sample_demux2vdec_saveFrame.c  sample_demux2vdec_saveFrame.conf  sample_demux2vdec_saveFrame.h
Software/sunxi-mpp/sample/sample_driverVipp/: CMakeLists.txt  sample_driverVipp.c  sample_driverVipp.h
Software/sunxi-mpp/sample/sample_g2d/: CMakeLists.txt  board_1920x1080.nv21  readme.txt  sample_g2d.c  sample_g2d.h  sample_g2d_config.h  sample_g2d_mem.c  sample_g2d_mem.h
Software/sunxi-mpp/sample/sample_glog/: CMakeLists.txt  Readme.txt  sample_glog.cpp  sample_glog.h
Software/sunxi-mpp/sample/sample_multi_vi2venc2muxer/: CMakeLists.txt  sample_multi_vi2venc2muxer.c  sample_multi_vi2venc2muxer.conf  sample_multi_vi2venc2muxer.h  sample_multi_vi2venc2muxer_conf.h
Software/sunxi-mpp/sample/sample_rtsp/: CMakeLists.txt  Readme.txt  rtsp_server.cpp  sample_rtsp.c  sample_rtsp.conf  sample_rtsp.h  sample_rtsp_config.h
Software/sunxi-mpp/sample/sample_smartIPC_demo/: CMakeLists.txt  aiservice.c  aiservice.h  aiservice_detect.c  aiservice_detect.h  aiservice_hw_scale.c  aiservice_hw_scale.h  (+12 more)
(+1856 files in other folders)
