add_subdirectory(sample_virvi2vo)
add_subdirectory(sample_virvi2vo_zoom)
add_subdirectory(sample_vo)
add_subdirectory(sample_MotionDetect)
add_subdirectory(configfileparser)
add_subdirectory(sample_virvi)
add_subdirectory(sample_vin_isp_test)
add_subdirectory(sample_virvi2venc)
add_subdirectory(sample_driverVipp)
add_subdirectory(sample_vi_reset)
add_subdirectory(sample_venc)
add_subdirectory(sample_venc2muxer)