add_subdirectory(sample_virvi2vo)
add_subdirectory(sample_virvi2vo_zoom)
add_subdirectory(sample_vo)
add_subdirectory(sample_MotionDetect)
add_subdirectory(configfileparser)
add_subdirectory(sample_virvi)
add_subdirectory(sample_vin_isp_test)
add_subdirectory(sample_virvi2venc)
add_subdirectory(sample_driverVipp)
add_subdirectory(sample_vi_reset)
add_subdirectory(sample_venc)
add_subdirectory(sample_venc2muxer)
add_subdirectory(sample_timelapse)
add_subdirectory(sample_virvi2venc2muxer)
add_subdirectory(sample_multi_vi2venc2muxer)
add_subdirectory(sample_rtsp)
add_subdirectory(sample_CodecParallel)
add_subdirectory(sample_demux2vdec)
add_subdirectory(sample_demux2vdec_saveFrame)
add_subdirectory(sample_demux2vdec2vo)
add_subdirectory(sample_UILayer)
add_subdirectory(sample_g2d)
add_subdirectory(sample_vi_g2d)
add_subdirectory(sample_glog)
add_subdirectory(sample_uvcout)
add_subdirectory(sample_uvc_vo)
add_subdirectory(sample_uvc2vdec_vo)
add_subdirectory(sample_uvc2vdenc2vo)
add_subdirectory(sample_uvc2vo)
add_subdirectory(sample_smartIPC_demo)
add_subdirectory(sample_smartPreview_demo)
add_subdirectory(sample_ai)
add_subdirectory(sample_ao)
add_subdirectory(sample_aoSync)
add_subdirectory(sample_ao_resample_mixer)
add_subdirectory(sample_aec)
add_subdirectory(sample_aenc)
add_subdirectory(sample_ai2aenc)
add_subdirectory(sample_ai2aenc2muxer)
add_subdirectory(sample_adec)
add_subdirectory(sample_demux2adec)
add_subdirectory(sample_demux2adec2ao)
